# modernrs

./: .gitignore  README.md  Stringer.rs  pattern_matching.rs  userinput.rs
2022/: case
2022/FindUser/: Cargo.toml
2022/UStrings/: Cargo.toml
2022/_logic/: Cargo.toml
2022/_nothing/: Cargo.toml
2022/bevy_mania/: Cargo.toml
2022/enum_again/: Cargo.toml
2022/enum_structures/: Cargo.toml
2022/ext_crates/: Cargo.toml
2022/ext_modules/: Cargo.toml
2022/find_user/: Cargo.toml
2022/gamesdl2/: Cargo.toml
2022/guess/: Cargo.toml
2022/hashmappers/: Cargo.toml
2022/initproc/: Cargo.toml
2022/iterator_prac/: Cargo.toml
2022/managebills/: Cargo.toml
2022/odu/: Cargo.toml
2022/ownership_principles/: Cargo.toml
2022/poweropt/: Cargo.toml
2022/rougelike/: Cargo.toml
2022/showoff/: Cargo.toml
2022/stdlib_exec/: Cargo.toml
2022/traitology/: Cargo.toml
2022/traits_types_lifetimes/: Cargo.toml
2023/astrology_proto/: Cargo.toml
2023/astrology_proto/src/: astrology.rs  astrology_first.rs.bak  main.rs
2023/bears/: Cargo.toml
2026/moneyflow/: .env  Cargo.toml
2026/moneyflow/migrations/: 20260301174035_create_users_table.sql  20260301174446_create_categories_table.sql  20260301203731_create_transactions_table.sql
2026/moneyflow/src/: main.rs
2026/moneyflow/src/controllers/: auth.rs  me.rs
2026/pg_app/: .env  Cargo.toml
2026/pg_app/migrations/: 20260302002839_create_users.sql
2026/pg_app/src/: main.rs
_stringy/: Cargo.toml
bj/: Cargo.toml
nikki/: Cargo.toml
pardon/: Cargo.toml
runactix/: Cargo.toml
zero2prod/: Cargo.toml
(+271 files in other folders)
