[package]
name = "astrology_proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "tokio"] }
actix-web = "4.0.0-beta.8"
serde = "1.0"
serde_json = "1.0"
