[package]
name = "moneyflow"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ['derive'] }
serde_json = "1.0.149"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls",
  "mysql",
  "chrono"
]}
tokio = { version = "1.49.0", features = ["full"] }
