[package]
name = "pg_app"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "chrono",
  "uuid"
]}

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"]}
dotenvy = "0.15"

